    methods on MapperExtension have a slightly different method signature
    now as a result of the change; hoping that these methods are not 
    in widespread use as of yet.
    - more rearrangements of unit-of-work commit scheme to better allow
    dependencies within circular flushes to work properly...updated
    task traversal/logging implementation
    - added an automatic "row switch" feature to mapping, which will
    detect a pending instance/deleted instance pair with the same 
    identity key and convert the INSERT/DELETE to a single UPDATE
    - "association" mappings simplified to take advantage of 
    automatic "row switch" feature
    - "custom list classes" is now implemented via the "collection_class"
    keyword argument to relation().  the old way still works but is
    deprecated [ticket:212]
    - added "viewonly" flag to relation(), allows construction of
    relations that have no effect on the flush() process.
    - added "lockmode" argument to base Query select/get functions, 
    including "with_lockmode" function to get a Query copy that has 
    a default locking mode.  Will translate "read"/"update" 
    arguments into a for_update argument on the select side.
    [ticket:292]
    - implemented "version check" logic in Query/Mapper, used
    when version_id_col is in effect and query.with_lockmode()
    is used to get() an instance thats already loaded
    - post_update behavior improved; does a better job at not 
    updating too many rows, updates only required columns
    [ticket:208]
    - adjustments to eager loading so that its "eager chain" is
    kept separate from the normal mapper setup, thereby
    preventing conflicts with lazy loader operation, fixes 
    [ticket:308]
    - fix to deferred group loading
    - added "batch=True" flag to mapper; if False, save_obj
    will fully save one object at a time including calls
    to before_XXXX and after_XXXX