@@ -225,6 +225,38 @@ class MultipleTableTest(testbase.PersistTest):
         session.delete(c)
         session.flush()
 
+    def test_insert_order(self):
+        person_join = polymorphic_union(
+            {
+                'engineer':people.join(engineers),
+                'manager':people.join(managers),
+                'person':people.select(people.c.type=='person'),
+            }, None, 'pjoin')
+
+        person_mapper = mapper(Person, people, select_table=person_join, polymorphic_on=person_join.c.type, polymorphic_identity='person')
+
+        mapper(Engineer, engineers, inherits=person_mapper, polymorphic_identity='engineer')
+        mapper(Manager, managers, inherits=person_mapper, polymorphic_identity='manager')
+        mapper(Company, companies, properties={
+            'employees': relation(Person, private=True, backref='company', order_by=person_join.c.person_id)
+        })
+
+        session = create_session()
+        c = Company(name='company1')
+        c.employees.append(Manager(status='AAB', manager_name='manager1', name='pointy haired boss'))
+        c.employees.append(Engineer(status='BBA', engineer_name='engineer1', primary_language='java', name='dilbert'))
+        c.employees.append(Person(status='HHH', name='joesmith'))
+        c.employees.append(Engineer(status='CGG', engineer_name='engineer2', primary_language='python', name='wally'))
+        c.employees.append(Manager(status='ABA', manager_name='manager2', name='jsmith'))
+        session.save(c)
+        session.flush()
+        session.clear()
+        c = session.query(Company).get(c.company_id)
+        for e in c.employees:
+            print e, e._instance_key, e.company
+        
+        assert [e.get_name() for e in c.employees] == ['pointy haired boss', 'dilbert', 'joesmith', 'wally', 'jsmith']
+
 if __name__ == "__main__":    
     testbase.main()
 
